<resources>
    <string name="app_name">Unbox</string>
    <string name="code_planet">Code Planet</string>
    <string name="upvote">Upvote</string>
    <string name="game_planet">Game Planet</string>
    <string name="animation_planet">Animation Planet</string>
    <string name="android_planet">Android Planet</string>
    <string name="basics_of_programming">Basics of programming</string>
    <string name="basics_of_programming_title">If you can write \"Hello World\" you can change the world.</string>
    <string name="basics_of_c_programming">Basics of C programming</string>
    <string name="basics_of_c_title">C is simple. It takes a genius to understand its simplicity.</string>

    <!--    video urls-->
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]> </string>
    <string name="sign_out">Sign Out</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="planetary">Planetary</string>
    <string name="time_placeholder">03:23</string>
</resources>
